feat: add public profiles, self-account, discovery, and E2E test infrastructure
Backend:
- Add PublicProfileService, SelfAccountService, DiscoveryProfileMapper,
  ProfileLocationMapper, and PublicProfileMediaService
- Add PromoterController and SelfAccountController
- Add public profile DTOs for musician, venue, and promoter (with location and media)
- Add self-account response DTOs for all three personas
- Add discovery response DTOs (MusicianSearchResult, VenueMatch, VenueSearchResult)
- Add UpdateMusicianProfileRequest with StrictBooleanDeserializer and StrictStringDeserializer
- Add PersonaAuthorizationService for ownership checks
- Add ObjectStorageHealthIndicator and health group configuration tests
- Add HttpUrl and HttpUrlValidator custom constraint
- Update MusicianController and VenueController with refactored endpoints
- Update SecurityConfig, GlobalExceptionHandler, and application.properties
- Expand S3ObjectStorageService and MediaAssetRepository
- Add unit tests for all new services, controllers, and security components

Frontend:
- Update MusicianHomeScreen and ProfileScreen
- Expand api.ts with new profile and discovery API calls

Postman / E2E:
- Add MVPConnect-Backend-E2E Postman collection and Local environment
- Add build-collection.js script
- Add cleanup-local-e2e scripts (PowerShell and Node) with tests
- Add BACKEND_E2E_TESTING.md guide

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>